Fixed messy overflow behaviour

--- a/web/src/styles/components/AudioSelector.styl
+++ b/web/src/styles/components/AudioSelector.styl
@@ -1,10 +1,14 @@
 .AudioSelector
+  overflow: hidden
   &__row
     display: flex
     align-items: center
+    overflow: hidden
   .AudioSelector__control
     flex: 1
+    width: 100%
   .AudioSelector__preview
+    flex-shrink: 0
     width: 25px
     height: 25px
     border: 0
